static/styles/css/style.css
/* General page setup */

.center-element {
    display: flex;
    justify-content: start;
    align-items: center;
}


/* Song page songs <ul> No Bullet */

.song-li {
    list-style-type: none;
}

.song-head {
    font-family: Georgia, 'Times New Roman', Times, serif;
    color: #EAEAEA;
}

.song-card {
    color: white;
    min-height: 400px;
    font-family: Georgia, 'Times New Roman', Times, serif;
}

.song-main {
    background-color: deepskyblue;

}

.nav-bar-text {
    color: white;
    font-size: large;
}

.all-body {
    background-image: url('/static/images/studio_back.jpg');
    background-position: center center;
    background-attachment: fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-repeat: no-repeat;
    height: 100vh;
    width: 100vw;
}

/* Footer phantom main page */

.min-height-main-footer {
    min-height: calc(100vh - 135px);

}


/* Swatch Colors background colors */
.deep-sky-blue {
    background-color: #00b8ff;
}

.rich-electric-blue {
    background-color: #009bd6;
}

.sea-blue {
    background-color: #00719c;
}

.indigo-dye {
    background-color: #00415a
}

.rich-black {
    background-color: #001f2b
}

/* Slider for Audio song page */
audio::-webkit-media-controls-play-button,
audio::-webkit-media-controls-panel {
    background-color: deepskyblue;
}

/* Audio */
audio {
    display: flex;
}

/* Dev tool for centering */

.red {
    background-color: red;
}

.green {
    background-color: green;
}

.blue {
    background-color: blue;
}

.yellow {
    background-color: yellow;
}

/*  Fonts */
@font-face {
    font-family: 'ECG Font';
    src: url('/static/lifeline-font/Lifeline-7O6A.ttf') format('truetype');
}

/* Pulse Font */
.lifeline-font {
    font-family: 'ECG Font', sans-serif;
    font-weight: 100;
    font-size: xx-large;
    color: white;


}

/* Allauth  */

.login label,
.login .error-message,
.login input[type="text"],
.login input[type="email"],
.login input[type="password"] {
    color: white;

}

.item-discpt {
    color: white;
    font-size: small;
    font-family: Georgia, 'Times New Roman', Times, serif;
}


.navbar {
    background-color: #001f2b;
}

.card-title,
.card-text {
    color: antiquewhite;
}

.merch-card-text {
    color: antiquewhite;
}

/* detain main */

.detail-main-background {
    background-color: white;
}


/* Merchandise Discription Text Tags */


.discription-page-text {
    color: white;
    font-family: 'Open Sans', sans-serif;
}
/* Star Rating */
.stars {
    display: inline-block;
    font-size: 0;
}

.star {
    display: inline-block;
    width: 20px;
    height: 20px;
    margin: 0 2px;
    /* background-color: #ccc; */
}

.star.gold {
    background-color: gold;
}

.merch-main-height{
    min-height: 100vh;
}

.merch-item-height {
    height: auto;
    width: auto;
    background-color: #00415a;
    

}

/* Media Sizes */

/* Remove gap at to of screen */
@media(max-width: 767px) {
    .merch-main-height {
        align-items: flex-start;
        min-height: auto;
        padding-top: 70px;
        
    }
}

